# Rescript-Purescript-Transpiler

./: .gitignore  README.md  flake.nix
cst_viewer/: books.json  constant.json  cst_viewer.opam  dune-project  person.json  sample_rescript.cmj  sample_rescript.cmt  sample_rescript.json  sample_rescript.res  temp.res  test_type.json
cst_viewer/lib/: dune
cst_viewer/test/: dune
haskell_rescript_types/: CHANGELOG.md  haskellRescriptTypes.cabal  rescript_parsetree.json
haskell_rescript_types/app/: Main.hs  RescriptParsetree.hs
ps_lib/: packages.dhall  spago.dhall
ps_lib/src/: Main.purs
ps_lib/src/StringCheck/: StringCheck.purs  StringCheck2.purs
rs_check/: package-lock.json  package.json  rescript.json  script_to_create_js_to_res.js
rs_check/src/: Demo.bs.js  Demo.res  Main.bs.js  Main.res  Test.bs.js  Test.res  index.bs.js  index.res  index.resi  ts2ocaml.bs.js  types.bs.js  types.res  types.resi
rs_check/typescript/: types.ts
rust_transpiler/: Cargo.toml  Readme.md  sample_rescript.json
rust_transpiler/src/: main.rs
rust_transpiler/src/parsetree/: mod.rs
rust_transpiler/src/parsetree/purescript/: mod.rs  names.rs  types.rs
rust_transpiler/src/parsetree/rescript/: asttypes.rs  mod.rs  types.rs
